--- a/src/scss/_alert.scss
+++ b/src/scss/_alert.scss
@@ -9,7 +9,7 @@
         border-radius: 10px;
 
         & > p {
-            margin-bottom: 10px;
+            margin: 0 0 10px 0;
 
             &:first-child {
                 &::before {
