--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -1,13 +1,27 @@
+@import 'variables';
+
 .yfm {
     .tabs {
         margin-bottom: 15px;
+
+        ol {
+            counter-reset: tabs-list;
+
+            & > li {
+                counter-increment: tabs-list;
+
+                &::before {
+                    content: counters(tabs-list, '.') '. ';
+                }
+            }
+        }
     }
 
     .tab-list {
         display: flex;
         margin-bottom: 15px;
 
-        border-bottom: 1px solid #e7e7e7;
+        border-bottom: 1px solid $borderColor;
     }
 
     .tab {
@@ -26,11 +40,11 @@
         }
 
         &:hover, &:active {
-            color: #d00;
+            color: $brandColor;
         }
 
         &.active {
-            border-bottom-color: #d00;
+            border-bottom-color: $brandColor;
         }
     }
 
