--- a/src/scss/_anchor.scss
+++ b/src/scss/_anchor.scss
@@ -1,5 +1,3 @@
-@import 'variables';
-
 .yfm {
     h1, h2, h3, h4, h5, h6 {
         .anchor {
@@ -11,19 +9,14 @@
 
             text-align: center;
             font-size: 18px;
+        }
+
+        .anchor::before {
+            content: '#';
             visibility: hidden;
-
-            &::before {
-                content: '#';
-            }
         }
 
-        &:hover .anchor {
-            visibility: visible;
-        }
-
-        &:target .anchor {
-            color: $brandColor;
+        &:hover .anchor::before {
             visibility: visible;
         }
     }
