--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,3 +2,6 @@ $textColor: #4b4b4b;
 $borderColor: #e7e7e7;
 $accentColor: #027bf3;
 $brandColor: #d00;
+
+$codeBorder: 1px solid #dce6f0;
+$codeBackground: #f7fbff;
