--- a/src/scss/_highlight.scss
+++ b/src/scss/_highlight.scss
@@ -6,15 +6,18 @@
         overflow-x: auto;
         padding: 15px;
         background: $codeBackground;
+        background: var(--yfm-color-hljs-background);
     }
 
     .hljs,
     .hljs-subst {
         color: #444;
+        color: var(--yfm-color-hljs-subst);
     }
 
     .hljs-comment {
         color: #888888;
+        color: var(--yfm-color-hljs-comment);
     }
 
 
@@ -36,11 +39,13 @@
     .hljs-template-tag,
     .hljs-deletion {
         color: #880000;
+        color: var(--yfm-color-hljs-deletion);
     }
 
     .hljs-title,
     .hljs-section {
         color: #880000;
+        color: var(--yfm-color-hljs-section);
         font-weight: bold;
     }
 
@@ -52,11 +57,13 @@
     .hljs-selector-attr,
     .hljs-selector-pseudo {
         color: #BC6060;
+        color: var(--yfm-color-hljs-pseudo);
     }
 
 
     .hljs-literal {
         color: #78A960;
+        color: var(--yfm-color-hljs-literal);
     }
 
     .hljs-built_in,
@@ -64,15 +71,18 @@
     .hljs-code,
     .hljs-addition {
         color: #397300;
+        color: var(--yfm-color-hljs-addition);
     }
 
 
     .hljs-meta {
         color: #1f7199;
+        color: var(--yfm-color-hljs-meta);
     }
 
     .hljs-meta-string {
         color: #4d99bf;
+        color: var(--yfm-color-hljs-meta-string);
     }
 
 
