--- a/src/scss/_highlight.scss
+++ b/src/scss/_highlight.scss
@@ -5,7 +5,7 @@
         display: block;
         overflow-x: auto;
         padding: 15px;
-        background: $codeBackground;
+        background: $codeBackgroundColor;
         background: var(--yfm-color-hljs-background);
     }
 
