fix: move a small element after image to the next line

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -91,6 +91,10 @@ $codeBorder: 1px solid $codeBorderColor;
 
     }
 
+    img + small {
+        display: block;
+    }
+
     p,
     blockquote,
     ul,
