feat: redesign inline codes, listings, tables

--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -1,9 +1,19 @@
 .yfm {
     &-clipboard {
         position: relative;
+
+        &:hover &-button {
+            display: block;
+        }
+
+        & > pre {
+            border-radius: 10px;
+            overflow: hidden;
+        }
     }
 
     &-clipboard-button {
+        display: none;
         position: absolute;
         cursor: pointer;
         top: 16px;
