--- a/src/scss/_cut.scss
+++ b/src/scss/_cut.scss
@@ -29,7 +29,7 @@
 
     &.open {
         #{$class}-content {
-            padding-top: 5px;
+            padding: 5px 0 15px 30px;
             height: auto;
         }
 
