--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -73,7 +73,7 @@
         font-weight: 700;
     }
 
-    img {
+    img, svg {
         box-sizing: content-box;
         max-width: 100%;
         border: none;
@@ -86,7 +86,10 @@
         &[align=left] {
             padding-right: 20px;
         }
+    }
 
+    svg {
+        height: auto;
     }
 
     img + small {
