Fix note in lists CLOUDFRONT-4867

--- a/src/scss/_note.scss
+++ b/src/scss/_note.scss
@@ -10,7 +10,7 @@ $tipBackgroundColor: rgba(63, 201, 46, 0.1);
 $warningBackgroundColor: rgba(255, 136, 0, 0.15);
 $importantBackgroundColor: rgba(235, 50, 38, 0.08);
 
-.yfm-note {
+.yfm .yfm-note {
     max-width: 1296px;
     margin: 20px 0;
     padding: 20px 20px 20px 64px;
