--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -77,6 +77,7 @@
         box-sizing: content-box;
         max-width: 100%;
         border: none;
+        vertical-align: middle;
 
         &[align=right] {
             padding-left: 20px;
