--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -29,11 +29,12 @@
         margin-right: 20px;
         border-bottom: 2px solid transparent;
 
-        line-height: 33px;
+        padding: 6px 0 7px 0;
         font-weight: 700;
         outline: none;
         cursor: pointer;
         user-select: none;
+        white-space: break-spaces;
 
         &:last-child {
             margin-right: 0;
