--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -59,7 +59,7 @@
 }
 
 .yfm {
-    .yfm-table-container[data-mode='print'] {
+    .yfm-table-container {
         position: relative;
 
         & > table {
