use @diplodoc/tabs-extension

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -1,10 +1,11 @@
 @import 'common';
 @import 'note';
 @import 'anchor';
-@import 'tabs';
 @import 'highlight';
 @import 'code';
 @import 'print';
 @import 'cut';
 @import 'file';
 @import 'term';
+
+@import '@diplodoc/tabs-extension/runtime/styles.css';
