--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -8,4 +8,4 @@
 @import 'file';
 @import 'term';
 
-@import '../../node_modules/@diplodoc/tabs-extension/runtime/index.css';
+@import '@diplodoc/tabs-extension/runtime';
