--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -146,7 +146,7 @@
     }
 
     table {
-        color: #00000080;
+        color: #333;
 
         display: inline-block;
         max-width: 100%;
@@ -155,8 +155,10 @@
         position: relative;
         z-index: 1;
 
+        border: 1px solid $borderColor;
         box-sizing: border-box;
-        border-collapse: separate;
+        border-radius: 8px;
+        border-collapse: collapse;
         border-spacing: 0;
         background: $baseColor;
 
@@ -164,31 +166,12 @@
             background-color: $tableRowBackgroundColor;
         }
 
-        tr:first-child td:first-child {
-            border-top-left-radius: $tableBorderRadius;
-        }
-
-        tr:first-child td:last-child {
-            border-top-right-radius: $tableBorderRadius;
-        }
-
-        tr:last-child td:first-child {
-            border-bottom-left-radius: $tableBorderRadius;
-        }
-
-        tr:last-child td:last-child {
-            border-bottom-right-radius: $tableBorderRadius;
-        }
-
         th, td {
-            padding: 20px 30px;
+            padding: 10px 20px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
             border: 1px solid $borderColor;
-            text-align: center;
-            // Idk about font-size, if you can find better font-size please use it.
-            font-size: 1.1rem;
 
             p {
                 padding: 0;
@@ -198,11 +181,12 @@
 
         th {
             font-weight: 500;
+            text-align: left;
         }
 
         td {
             white-space: normal;
-            vertical-align: baseline;
+            vertical-align: top;
         }
     }
 
