--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -155,15 +155,37 @@
         position: relative;
         z-index: 1;
 
-        border: 1px solid $borderColor;
         box-sizing: border-box;
-        border-radius: 8px;
-        border-collapse: collapse;
+        border-collapse: separate;
         border-spacing: 0;
         background: $baseColor;
 
         thead, tr:nth-child(2n) {
             background-color: $tableRowBackgroundColor;
+        }
+
+        tr:first-child td:first-child {
+            border-top-left-radius: $tableBorderRadius;
+        }
+
+        tr:first-child td:last-child {
+            border-top-right-radius: $tableBorderRadius;
+        }
+
+        tr:last-child td:first-child {
+            border-bottom-left-radius: $tableBorderRadius;
+        }
+
+        tr:last-child td:last-child {
+            border-bottom-right-radius: $tableBorderRadius;
+        }
+
+        tr:first-child td {
+            border-top-style: solid;
+        }
+
+        tr td:first-child {
+            border-top-style: solid;
         }
 
         th, td {
@@ -187,6 +209,7 @@
         td {
             white-space: normal;
             vertical-align: top;
+            border-style: none solid solid none;
         }
     }
 
@@ -272,7 +295,7 @@
         margin-bottom: 0;
     }
 
-    &:not(.yfm_no-list-reset){
+    &:not(.yfm_no-list-reset) {
         ol {
             list-style-type: none;
             counter-reset: list;
