fix: left border fixed

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -185,7 +185,7 @@
         }
 
         tr td:first-child {
-            border-top-style: solid;
+            border-left: 1px solid $borderColor;
         }
 
         th, td {
