feat: WIKI-19593: implementation of new table design (#283)
* feat: WIKI-19593: implementation of new table design

* fix: table styles

* fix: changed border-radius styles back.

* fix: left border fixed

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -146,7 +146,7 @@
     }
 
     table {
-        color: #333333;
+        color: #333;
 
         display: inline-block;
         max-width: 100%;
@@ -155,10 +155,8 @@
         position: relative;
         z-index: 1;
 
-        border: 1px solid $borderColor;
         box-sizing: border-box;
-        border-radius: 8px;
-        border-collapse: collapse;
+        border-collapse: separate;
         border-spacing: 0;
         background: $baseColor;
 
@@ -166,11 +164,41 @@
             background-color: $tableRowBackgroundColor;
         }
 
+        tr:first-child td:first-child {
+            border-top-left-radius: $tableBorderRadius;
+        }
+
+        tr:first-child td:last-child {
+            border-top-right-radius: $tableBorderRadius;
+        }
+
+        tr:last-child td:first-child {
+            border-bottom-left-radius: $tableBorderRadius;
+        }
+
+        tr:last-child td:last-child {
+            border-bottom-right-radius: $tableBorderRadius;
+        }
+
+        tr:first-child td {
+            border-top-style: solid;
+        }
+
+        tr td:first-child {
+            border-left: 1px solid $borderColor;
+        }
+
         th, td {
-            padding: 10px 15px;
+            padding: 10px 20px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            border: 1px solid $borderColor;
+
+            p {
+                padding: 0;
+                margin: 0;
+            }
         }
 
         th {
@@ -180,7 +208,8 @@
 
         td {
             white-space: normal;
-            vertical-align: baseline;
+            vertical-align: top;
+            border-style: none solid solid none;
         }
     }
 
@@ -266,7 +295,7 @@
         margin-bottom: 0;
     }
 
-    &:not(.yfm_no-list-reset){
+    &:not(.yfm_no-list-reset) {
         ol {
             list-style-type: none;
             counter-reset: list;
