--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -156,7 +156,9 @@
         z-index: 1;
 
         box-sizing: border-box;
-        border-collapse: separate;
+        border: 1px solid $borderColor;
+        border-radius: 8px;
+        border-collapse: collapse;
         border-spacing: 0;
         background: $baseColor;
 
@@ -164,29 +166,18 @@
             background-color: $tableRowBackgroundColor;
         }
 
-        tr:first-child td:first-child {
-            border-top-left-radius: $tableBorderRadius;
+        tr:first-child {
+            td, th {
+                border-top: none;
+            }
         }
 
-        tr:first-child td:last-child {
-            border-top-right-radius: $tableBorderRadius;
+        tr:last-child {
+            td, th {
+                border-bottom: none;
+            }
         }
 
-        tr:last-child td:first-child {
-            border-bottom-left-radius: $tableBorderRadius;
-        }
-
-        tr:last-child td:last-child {
-            border-bottom-right-radius: $tableBorderRadius;
-        }
-
-        tr:first-child td {
-            border-top-style: solid;
-        }
-
-        tr td:first-child {
-            border-left: 1px solid $borderColor;
-        }
 
         th, td {
             padding: 10px 20px;
@@ -201,15 +192,11 @@
             }
         }
 
-        th {
-            font-weight: 500;
-            text-align: left;
+        tr td:first-child, tr th:first-child {
+            border-left: none;
         }
-
-        td {
-            white-space: normal;
-            vertical-align: top;
-            border-style: none solid solid none;
+        tr td:last-child, tr th:last-child {
+            border-right: none;
         }
     }
 
