--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -146,7 +146,7 @@
     }
 
     table {
-        color: #333333;
+        color: #333;
 
         display: inline-block;
         max-width: 100%;
@@ -155,8 +155,8 @@
         position: relative;
         z-index: 1;
 
-        border: 1px solid $borderColor;
         box-sizing: border-box;
+        border: 1px solid $borderColor;
         border-radius: 8px;
         border-collapse: collapse;
         border-spacing: 0;
@@ -166,21 +166,37 @@
             background-color: $tableRowBackgroundColor;
         }
 
+        tr:first-child {
+            td, th {
+                border-top: none;
+            }
+        }
+
+        tr:last-child {
+            td, th {
+                border-bottom: none;
+            }
+        }
+
+
         th, td {
-            padding: 10px 15px;
+            padding: 10px 20px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            border: 1px solid $borderColor;
+
+            p {
+                padding: 0;
+                margin: 0;
+            }
         }
 
-        th {
-            font-weight: 500;
-            text-align: left;
+        tr td:first-child, tr th:first-child {
+            border-left: none;
         }
-
-        td {
-            white-space: normal;
-            vertical-align: baseline;
+        tr td:last-child, tr th:last-child {
+            border-right: none;
         }
     }
 
@@ -266,7 +282,7 @@
         margin-bottom: 0;
     }
 
-    &:not(.yfm_no-list-reset){
+    &:not(.yfm_no-list-reset) {
         ol {
             list-style-type: none;
             counter-reset: list;
