reset ordered lists inside cuts

--- a/src/scss/_cut.scss
+++ b/src/scss/_cut.scss
@@ -37,6 +37,18 @@
             transform: translateY(-50%);
         }
     }
+
+    .yfm:not(.yfm_no-list-reset) & ol {
+        counter-reset: cut-list;
+
+        & > li {
+            counter-increment: cut-list;
+
+            &::before {
+                content: counters(cut-list, '.') '. ';
+            }
+        }
+    }
 }
 
 
