--- a/src/scss/print/cut.scss
+++ b/src/scss/print/cut.scss
@@ -16,3 +16,17 @@
         }
     }
 }
+
+.yfm-cut-content {
+    .yfm:not(.yfm_no-list-reset) & ol {
+        counter-reset: cut-list;
+
+        & > li {
+            counter-increment: cut-list;
+
+            &::before {
+                content: counters(cut-list, '.') '. ';
+            }
+        }
+    }
+}
