--- a/src/scss/_anchor.scss
+++ b/src/scss/_anchor.scss
@@ -14,6 +14,9 @@
         .yfm-anchor::before {
             content: '#';
             visibility: hidden;
+            position: absolute;
+            
+            padding-right: 2px;
         }
 
         &:hover .yfm-anchor::before {
