fix: anchors in tabs

--- a/src/scss/_anchor.scss
+++ b/src/scss/_anchor.scss
@@ -14,9 +14,6 @@
         .yfm-anchor::before {
             content: '#';
             visibility: hidden;
-            position: absolute;
-            
-            padding-right: 2px;
         }
 
         &:hover .yfm-anchor::before {
@@ -33,4 +30,11 @@
             }
         }
     };
+
+    .yfm-tabs {
+        .yfm-anchor::before {
+            position: absolute;
+            padding-right: 2px;
+        }
+    }
 }
