--- a/src/scss/print/cut.scss
+++ b/src/scss/print/cut.scss
@@ -11,6 +11,7 @@
 
             &-content {
                 height: auto;
+                display: block;
                 padding: 5px 0 15px 30px;
             }
         }
