--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -78,14 +78,13 @@
 }   
 
 .wide-element-wrapper {
-    display: inline-block;
+    display: flex;
+    gap: 30px;
     position: relative;
-    padding-right: 30px;
 
     &:hover > .wide-content-viewer {
         visibility: visible;
     }
-
 
     .wide-inner-element {
         max-width: 700px;
@@ -93,13 +92,11 @@
 }
 
 .wide-content-viewer {
-    position: absolute;
     visibility: hidden;
     width: 30px;
     height: 30px;
     z-index: 100;
     padding: 6px;
-    right: -20px;
     box-sizing: content-box;
     color: var(--g-color-text-primary);
     cursor: pointer;
@@ -109,7 +106,6 @@
         height: 20px;
     }
 }
-
 
 .wide-content-overlay {
     z-index: 100;
