--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -3,10 +3,10 @@
 @import 'anchor';
 @import 'highlight';
 @import 'code';
-@import 'cut';
 @import 'file';
 @import 'term';
 @import 'table';
 @import 'modal';
 
+@import '@diplodoc/cut-extension/runtime/styles.css';
 @import '@diplodoc/tabs-extension/runtime';
