--- a/src/scss/_cut.scss
+++ b/src/scss/_cut.scss
@@ -1,20 +1,28 @@
 .yfm-cut {
     $class: &;
-    
     margin-bottom: 15px;
 
     &-title {
+        list-style: none;
         cursor: pointer;
         position: relative;
         user-select: none;
         padding: 5px 0 5px 30px;
+
+        &::-webkit-details-marker {
+            display: none;
+        }
+
+        &:focus {
+            outline-color: $accentColor;
+        }
 
         &:before {
             content: '';
             z-index: 1;
             left: 0;
             top: 50%;
-            background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNiAxNiI+CiAgICA8cGF0aCBzdHJva2U9ImN1cnJlbnRDb2xvciIgZmlsbD0ibm9uZSIgZD0iTTMgNmw1IDUgNS01Ii8+Cjwvc3ZnPgo=");
+            background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxNiAxNiI+CiAgICA8cGF0aCBzdHJva2U9ImN1cnJlbnRDb2xvciIgZmlsbD0ibm9uZSIgZD0iTTMgNmw1IDUgNS01Ii8+Cjwvc3ZnPgo=');
             transform: translateY(-50%) rotate(-90deg);
             transition: transform 0.3s ease;
             height: 20px;
@@ -24,17 +32,10 @@
     }
 
     &-content {
-        display: none;
-        overflow: hidden;
-        transition: height 0.3s ease-in-out;
+        padding: 5px 0 15px 30px;
     }
 
     &.open {
-        > #{$class}-content {
-            display: revert;
-            padding: 5px 0 15px 30px;
-        }
-
         > #{$class}-title:before {
             transform: translateY(-50%);
         }
@@ -52,5 +53,3 @@
         }
     }
 }
-
-
