--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -2,22 +2,35 @@
     &-clipboard {
         position: relative;
 
-        &:hover &-button {
-            display: block;
+        &-button {
+            &:hover, &:focus {
+                opacity: 1;
+            }
         }
 
         & > pre {
             border-radius: 10px;
             overflow: hidden;
         }
-    }
 
-    &-clipboard-button {
-        display: none;
-        position: absolute;
-        cursor: pointer;
-        top: 16px;
-        right: 16px;
-        z-index: 1;
+        &-button {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            z-index: 1;
+            opacity: 0;
+
+            //reset default button style
+            background: none;
+            color: inherit;
+            border: none;
+            padding: 0;
+            font: inherit;
+            cursor: pointer;
+        }
+
+        &-icon {
+            pointer-events: none;
+        }
     }
 }
