--- a/src/scss/_code.scss
+++ b/src/scss/_code.scss
@@ -2,8 +2,8 @@
     &-clipboard {
         position: relative;
 
-        &-button {
-            &:hover, &:focus {
+        &:hover {
+            .yfm-clipboard-button {
                 opacity: 1;
             }
         }
@@ -27,6 +27,10 @@
             padding: 0;
             font: inherit;
             cursor: pointer;
+
+            &:focus {
+                opacity: 1;
+            }
         }
 
         &-icon {
