feat: add cut plugin

--- a/src/scss/yfm.scss
+++ b/src/scss/yfm.scss
@@ -8,5 +8,5 @@
 @import 'table';
 @import 'modal';
 
-@import '@diplodoc/cut-extension/runtime/styles.css';
+@import '@diplodoc/cut-extension/runtime';
 @import '@diplodoc/tabs-extension/runtime';
